more suggestions incorporated

--- a/q_learning/cartpole_dqn.ipynb
+++ b/q_learning/cartpole_dqn.ipynb
@@ -12,7 +12,9 @@
     "\n",
     "mlpack contains non-GUI implementations of some of OpenAI gym's environments. In this notebook, we use one such environment for training the agent, as it is fast to train on.\n",
     "\n",
-    "As for testing, we make the agent run on OpenAI Gym toolkit's GUI interface provided through a distributed infrastructure (TCP API). A video of the trained agent can be seen in the end."
+    "As for testing, we make the agent run on OpenAI Gym toolkit's GUI interface provided through a distributed infrastructure (TCP API). More details can be found [here](https://github.com/zoq/gym_tcp_api).\n",
+    "\n",
+    "A video of the trained agent can be seen in the end."
    ]
   },
   {
@@ -155,8 +157,8 @@
    "source": [
     "// Set up DQN agent.\n",
     "QLearning<CartPole, decltype(model), AdamUpdate, decltype(policy)>\n",
-    "    agent(std::move(config), std::move(model), std::move(policy),\n",
-    "    std::move(replayMethod));"
+    "  agent(std::move(config), std::move(model), std::move(policy),\n",
+    "  std::move(replayMethod));"
    ]
   },
   {
@@ -186,38 +188,38 @@
     "// Function to train the agent on mlpack's own implementation of the CartPole environment.\n",
     "void train(const size_t threshold)\n",
     "{\n",
-    "    agent.Deterministic() = false;\n",
-    "    while (true)\n",
+    "  agent.Deterministic() = false;\n",
+    "  while (true)\n",
+    "  {\n",
+    "    double episodeReturn = agent.Episode();\n",
+    "    averageReturn(episodeReturn);\n",
+    "    episodes += 1;\n",
+    "\n",
+    "    if(episodes % 10 == 0)\n",
     "    {\n",
-    "        double episodeReturn = agent.Episode();\n",
-    "        averageReturn(episodeReturn);\n",
-    "        episodes += 1;\n",
-    "\n",
-    "        if(episodes % 10 == 0)\n",
-    "        {\n",
-    "            std::cout << \"Average return: \" << averageReturn.mean()\n",
-    "                << \"\\t Episode return: \" << episodeReturn \n",
-    "                << \"\\t Episode number: \" << episodes << std::endl;\n",
-    "        }\n",
-    "\n",
-    "        if (episodes > 1000)\n",
-    "        {\n",
-    "            std::cout << \"Cart Pole with DQN failed.\" << std::endl;\n",
-    "            break;\n",
-    "        }\n",
-    "\n",
-    "        if (averageReturn.mean() > threshold)\n",
-    "        {\n",
-    "            agent.Deterministic() = true;\n",
-    "            arma::running_stat<double> testReturn;\n",
-    "            for (size_t i = 0; i < 10; ++i)\n",
-    "            testReturn(agent.Episode());\n",
-    "\n",
-    "            std::cout << \"Average return in deterministic test: \"\n",
-    "              << testReturn.mean() << std::endl;\n",
-    "            break;\n",
-    "        }\n",
+    "      std::cout << \"Average return: \" << averageReturn.mean()\n",
+    "          << \"\\t Episode return: \" << episodeReturn \n",
+    "          << \"\\t Episode number: \" << episodes << std::endl;\n",
     "    }\n",
+    "\n",
+    "    if (episodes > 1000)\n",
+    "    {\n",
+    "      std::cout << \"Cart Pole with DQN failed.\" << std::endl;\n",
+    "      break;\n",
+    "    }\n",
+    "\n",
+    "    if (averageReturn.mean() > threshold)\n",
+    "    {\n",
+    "      agent.Deterministic() = true;\n",
+    "      arma::running_stat<double> testReturn;\n",
+    "      for (size_t i = 0; i < 10; ++i)\n",
+    "        testReturn(agent.Episode());\n",
+    "\n",
+    "      std::cout << \"Average return in deterministic test: \"\n",
+    "          << testReturn.mean() << std::endl;\n",
+    "      break;\n",
+    "    }\n",
+    "  }\n",
     "}"
    ]
   },
@@ -286,8 +288,6 @@
     }
    ],
    "source": [
-    "// TESTING BLOCK\n",
-    "\n",
     "// Creating and setting up the gym environment for testing.\n",
     "gym::Environment env(\"gym.kurg.org\", \"4040\", \"CartPole-v0\");\n",
     "env.monitor.start(\"./dummy/\", true, true);\n",
@@ -302,29 +302,29 @@
     "// Testing the agent on gym's environment.\n",
     "while (1)\n",
     "{\n",
-    "    // State from the environment is passed to the agent's internal representation.\n",
-    "    agent.State().Data() = env.observation;\n",
+    "  // State from the environment is passed to the agent's internal representation.\n",
+    "  agent.State().Data() = env.observation;\n",
     "\n",
-    "    // With the given state, the agent performs an action according to its defined policy.\n",
-    "    agent.Step();\n",
+    "  // With the given state, the agent performs an action according to its defined policy.\n",
+    "  agent.Step();\n",
     "\n",
-    "    // Action to take, decided by the policy.\n",
-    "    arma::mat action = {double(agent.Action())};\n",
+    "  // Action to take, decided by the policy.\n",
+    "  arma::mat action = {double(agent.Action())};\n",
     "\n",
-    "    env.step(action);\n",
-    "    totalReward += env.reward;\n",
-    "    totalSteps += 1;\n",
+    "  env.step(action);\n",
+    "  totalReward += env.reward;\n",
+    "  totalSteps += 1;\n",
     "\n",
-    "    if (env.done)\n",
-    "    {\n",
-    "        std::cout << \" Total steps: \" << totalSteps << \"\\t Total reward: \"\n",
-    "            << totalReward << std::endl;\n",
-    "        break;\n",
-    "    }\n",
+    "  if (env.done)\n",
+    "  {\n",
+    "    std::cout << \" Total steps: \" << totalSteps << \"\\t Total reward: \"\n",
+    "        << totalReward << std::endl;\n",
+    "    break;\n",
+    "  }\n",
     "\n",
-    "    // Uncomment the following lines to see the reward and action in each step.\n",
-    "    // std::cout << \" Current step: \" << totalSteps << \"\\t current reward: \"\n",
-    "    //   << totalReward << \"\\t Action taken: \" << action;\n",
+    "  // Uncomment the following lines to see the reward and action in each step.\n",
+    "  // std::cout << \" Current step: \" << totalSteps << \"\\t current reward: \"\n",
+    "  //   << totalReward << \"\\t Action taken: \" << action;\n",
     "}\n",
     "\n",
     "env.close();\n",
@@ -376,8 +376,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "// TESTING BLOCK\n",
-    "\n",
     "// Creating and setting up the gym environment for testing.\n",
     "gym::Environment env(\"gym.kurg.org\", \"4040\", \"CartPole-v0\");\n",
     "env.monitor.start(\"./dummy/\", true, true);\n",
@@ -392,29 +390,29 @@
     "// Testing the agent on gym's environment.\n",
     "while (1)\n",
     "{\n",
-    "    // State from the environment is passed to the agent's internal representation.\n",
-    "    agent.State().Data() = env.observation;\n",
+    "  // State from the environment is passed to the agent's internal representation.\n",
+    "  agent.State().Data() = env.observation;\n",
     "\n",
-    "    // With the given state, the agent performs an action according to its defined policy.\n",
-    "    agent.Step();\n",
+    "  // With the given state, the agent performs an action according to its defined policy.\n",
+    "  agent.Step();\n",
     "\n",
-    "    // Action to take, decided by the policy.\n",
-    "    arma::mat action = {double(agent.Action())};\n",
+    "  // Action to take, decided by the policy.\n",
+    "  arma::mat action = {double(agent.Action())};\n",
     "\n",
-    "    env.step(action);\n",
-    "    totalReward += env.reward;\n",
-    "    totalSteps += 1;\n",
+    "  env.step(action);\n",
+    "  totalReward += env.reward;\n",
+    "  totalSteps += 1;\n",
     "\n",
-    "    if (env.done)\n",
-    "    {\n",
-    "        std::cout << \" Total steps: \" << totalSteps << \"\\t Total reward: \"\n",
-    "            << totalReward << std::endl;\n",
-    "        break;\n",
-    "    }\n",
+    "  if (env.done)\n",
+    "  {\n",
+    "    std::cout << \" Total steps: \" << totalSteps << \"\\t Total reward: \"\n",
+    "        << totalReward << std::endl;\n",
+    "    break;\n",
+    "  }\n",
     "\n",
-    "    // Uncomment the following lines to see the reward and action in each step.\n",
-    "    // std::cout << \" Current step: \" << totalSteps << \"\\t current reward: \"\n",
-    "    //   << totalReward << \"\\t Action taken: \" << action;\n",
+    "  // Uncomment the following lines to see the reward and action in each step.\n",
+    "  // std::cout << \" Current step: \" << totalSteps << \"\\t current reward: \"\n",
+    "  //   << totalReward << \"\\t Action taken: \" << action;\n",
     "}\n",
     "\n",
     "env.close();\n",
