--- a/q_learning/cartpole_dqn.ipynb
+++ b/q_learning/cartpole_dqn.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,10 +212,10 @@
     "    {\n",
     "      agent.Deterministic() = true;\n",
     "      arma::running_stat<double> testReturn;\n",
-    "      for (size_t i = 0; i < 10; ++i)\n",
+    "      for (size_t i = 0; i < 100; ++i)\n",
     "        testReturn(agent.Episode());\n",
     "\n",
-    "      std::cout << \"Average return in deterministic test: \"\n",
+    "      std::cout << \"Average return in 100 consecutive trials : \"\n",
     "          << testReturn.mean() << std::endl;\n",
     "      break;\n",
     "    }\n",
@@ -232,35 +232,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Average return: 19.8\t Episode return: 20\t Episode number: 10\n",
-      "Average return: 19.75\t Episode return: 11\t Episode number: 20\n",
-      "Average return: 19.4667\t Episode return: 10\t Episode number: 30\n",
-      "Average return: 17.375\t Episode return: 10\t Episode number: 40\n",
-      "Average return: 17.18\t Episode return: 7\t Episode number: 50\n",
-      "Average return: 16.2833\t Episode return: 11\t Episode number: 60\n",
-      "Average return: 15.5571\t Episode return: 20\t Episode number: 70\n",
-      "Average return: 14.775\t Episode return: 8\t Episode number: 80\n",
-      "Average return: 14.1\t Episode return: 10\t Episode number: 90\n",
-      "Average return: 13.6\t Episode return: 10\t Episode number: 100\n",
-      "Average return: 13.1636\t Episode return: 10\t Episode number: 110\n",
-      "Average return: 13.125\t Episode return: 15\t Episode number: 120\n",
-      "Average return: 15.5077\t Episode return: 35\t Episode number: 130\n",
-      "Average return: 20.45\t Episode return: 62\t Episode number: 140\n",
-      "Average return: 25.3333\t Episode return: 126\t Episode number: 150\n",
-      "Average return in deterministic test: 144.3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "// Training the agent till average return reaches 25.\n",
-    "train(25)"
+    "// Training the agent till the total average return reaches 35.\n",
+    "train(35)"
    ]
   },
   {
@@ -272,32 +249,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " Total steps: 140\t Total reward: 140\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9eac06d7522645518181538b7417cc83",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "A Jupyter widget"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "// Creating and setting up the gym environment for testing.\n",
     "gym::Environment env(\"gym.kurg.org\", \"4040\", \"CartPole-v0\");\n",
@@ -354,95 +308,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Average return: 30.8\t Episode return: 112\t Episode number: 160\n",
-      "Average return: 36.9706\t Episode return: 200\t Episode number: 170\n",
-      "Average return: 44.2167\t Episode return: 134\t Episode number: 180\n",
-      "Average return: 51.6421\t Episode return: 200\t Episode number: 190\n",
-      "Average return: 58.92\t Episode return: 177\t Episode number: 200\n",
-      "Average return: 64.7048\t Episode return: 147\t Episode number: 210\n",
-      "Average return: 65.6045\t Episode return: 30\t Episode number: 220\n",
-      "Average return: 67.2565\t Episode return: 200\t Episode number: 230\n",
-      "Average return: 72.7875\t Episode return: 200\t Episode number: 240\n",
-      "Average return: 77.876\t Episode return: 200\t Episode number: 250\n",
-      "Average return: 82.5731\t Episode return: 200\t Episode number: 260\n",
-      "Average return: 86.9222\t Episode return: 200\t Episode number: 270\n",
-      "Average return: 90.5679\t Episode return: 200\t Episode number: 280\n",
-      "Average return: 94.3414\t Episode return: 200\t Episode number: 290\n",
-      "Average return: 97.8633\t Episode return: 200\t Episode number: 300\n",
-      "Average return: 101.158\t Episode return: 200\t Episode number: 310\n",
-      "Average return: 104.247\t Episode return: 200\t Episode number: 320\n",
-      "Average return: 107.148\t Episode return: 200\t Episode number: 330\n",
-      "Average return: 108.879\t Episode return: 9\t Episode number: 340\n",
-      "Average return: 110.369\t Episode return: 144\t Episode number: 350\n",
-      "Average return: 111.181\t Episode return: 158\t Episode number: 360\n",
-      "Average return: 113.508\t Episode return: 200\t Episode number: 370\n",
-      "Average return: 115.784\t Episode return: 200\t Episode number: 380\n",
-      "Average return: 117.944\t Episode return: 200\t Episode number: 390\n",
-      "Average return: 118.985\t Episode return: 20\t Episode number: 400\n",
-      "Average return: 117.651\t Episode return: 87\t Episode number: 410\n",
-      "Average return: 118.995\t Episode return: 200\t Episode number: 420\n",
-      "Average return: 120.767\t Episode return: 200\t Episode number: 430\n",
-      "Average return: 122.568\t Episode return: 200\t Episode number: 440\n",
-      "Average return: 124.289\t Episode return: 200\t Episode number: 450\n",
-      "Average return: 125.935\t Episode return: 200\t Episode number: 460\n",
-      "Average return: 127.402\t Episode return: 200\t Episode number: 470\n",
-      "Average return: 128.915\t Episode return: 200\t Episode number: 480\n",
-      "Average return: 130.365\t Episode return: 200\t Episode number: 490\n",
-      "Average return: 131.69\t Episode return: 200\t Episode number: 500\n",
-      "Average return: 133.029\t Episode return: 200\t Episode number: 510\n",
-      "Average return: 134.317\t Episode return: 200\t Episode number: 520\n",
-      "Average return: 135.557\t Episode return: 200\t Episode number: 530\n",
-      "Average return: 136.446\t Episode return: 200\t Episode number: 540\n",
-      "Average return: 137.602\t Episode return: 200\t Episode number: 550\n",
-      "Average return: 138.716\t Episode return: 200\t Episode number: 560\n",
-      "Average return: 139.791\t Episode return: 200\t Episode number: 570\n",
-      "Average return: 140.829\t Episode return: 200\t Episode number: 580\n",
-      "Average return: 141.832\t Episode return: 200\t Episode number: 590\n",
-      "Average return: 142.802\t Episode return: 200\t Episode number: 600\n",
-      "Average return: 143.739\t Episode return: 200\t Episode number: 610\n",
-      "Average return: 144.647\t Episode return: 200\t Episode number: 620\n",
-      "Average return: 145.525\t Episode return: 200\t Episode number: 630\n",
-      "Average return: 146.377\t Episode return: 200\t Episode number: 640\n",
-      "Average return: 147.202\t Episode return: 200\t Episode number: 650\n",
-      "Average return: 148.002\t Episode return: 200\t Episode number: 660\n",
-      "Average return: 148.778\t Episode return: 200\t Episode number: 670\n",
-      "Average return: 149.531\t Episode return: 200\t Episode number: 680\n",
-      "Average return: 150.262\t Episode return: 200\t Episode number: 690\n",
-      "Average return: 150.534\t Episode return: 20\t Episode number: 700\n",
-      "Average return: 149.454\t Episode return: 200\t Episode number: 710\n",
-      "Average return: 150.156\t Episode return: 200\t Episode number: 720\n",
-      "Average return: 150.838\t Episode return: 200\t Episode number: 730\n",
-      "Average return: 151.503\t Episode return: 200\t Episode number: 740\n",
-      "Average return: 152.149\t Episode return: 200\t Episode number: 750\n",
-      "Average return: 152.779\t Episode return: 200\t Episode number: 760\n",
-      "Average return: 153.392\t Episode return: 200\t Episode number: 770\n",
-      "Average return: 153.99\t Episode return: 200\t Episode number: 780\n",
-      "Average return: 154.572\t Episode return: 200\t Episode number: 790\n",
-      "Average return: 155.14\t Episode return: 200\t Episode number: 800\n",
-      "Average return: 155.694\t Episode return: 200\t Episode number: 810\n",
-      "Average return: 156.177\t Episode return: 200\t Episode number: 820\n",
-      "Average return: 156.705\t Episode return: 200\t Episode number: 830\n",
-      "Average return: 157.22\t Episode return: 200\t Episode number: 840\n",
-      "Average return: 157.724\t Episode return: 200\t Episode number: 850\n",
-      "Average return: 158.086\t Episode return: 200\t Episode number: 860\n",
-      "Average return: 158.568\t Episode return: 200\t Episode number: 870\n",
-      "Average return: 159.039\t Episode return: 200\t Episode number: 880\n",
-      "Average return: 159.499\t Episode return: 200\t Episode number: 890\n",
-      "Average return: 159.949\t Episode return: 200\t Episode number: 900\n",
-      "Average return in deterministic test: 200\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "// Training the same agent till average return reaches 60\n",
-    "train(160)"
+    "// Training the same agent till the total average return reaches 150\n",
+    "train(140)"
    ]
   },
   {
@@ -454,32 +325,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " Total steps: 200\t Total reward: 200\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "523ceeba5b1249d5b1a19a60ae824ff1",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "A Jupyter widget"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "// Creating and setting up the gym environment for testing.\n",
     "gym::Environment env(\"gym.kurg.org\", \"4040\", \"CartPole-v0\");\n",
