--- a/q_learning/cartpole_dqn.ipynb
+++ b/q_learning/cartpole_dqn.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,9 +232,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average return: 24.2\t Episode return: 27\t Episode number: 10\n",
+      "Average return: 20.9\t Episode return: 16\t Episode number: 20\n",
+      "Average return: 21.3\t Episode return: 13\t Episode number: 30\n",
+      "Average return: 19.575\t Episode return: 22\t Episode number: 40\n",
+      "Average return: 18.12\t Episode return: 8\t Episode number: 50\n",
+      "Average return: 17.15\t Episode return: 10\t Episode number: 60\n",
+      "Average return: 16.6571\t Episode return: 9\t Episode number: 70\n",
+      "Average return: 17.1375\t Episode return: 18\t Episode number: 80\n",
+      "Average return: 19.2778\t Episode return: 45\t Episode number: 90\n",
+      "Average return: 22.44\t Episode return: 43\t Episode number: 100\n",
+      "Average return: 26.1545\t Episode return: 52\t Episode number: 110\n",
+      "Average return: 33.9\t Episode return: 110\t Episode number: 120\n",
+      "Average return in 100 consecutive trials : 160.13\n"
+     ]
+    }
+   ],
    "source": [
     "// Training the agent till the total average return reaches 35.\n",
     "train(35)"
@@ -249,9 +269,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Total steps: 200\t Total reward: 200\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e6ee8825b40b4826a9c1f60f19401c21",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "A Jupyter widget"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "// Creating and setting up the gym environment for testing.\n",
     "gym::Environment env(\"gym.kurg.org\", \"4040\", \"CartPole-v0\");\n",
@@ -308,11 +351,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average return: 45.4231\t Episode return: 187\t Episode number: 130\n",
+      "Average return: 56.0571\t Episode return: 200\t Episode number: 140\n",
+      "Average return: 61.7733\t Episode return: 20\t Episode number: 150\n",
+      "Average return: 60.4875\t Episode return: 13\t Episode number: 160\n",
+      "Average return: 65.4765\t Episode return: 200\t Episode number: 170\n",
+      "Average return: 72.85\t Episode return: 200\t Episode number: 180\n",
+      "Average return: 79.3737\t Episode return: 200\t Episode number: 190\n",
+      "Average return: 85.405\t Episode return: 200\t Episode number: 200\n",
+      "Average return: 90.8524\t Episode return: 200\t Episode number: 210\n",
+      "Average return: 95.8136\t Episode return: 200\t Episode number: 220\n",
+      "Average return: 99.1304\t Episode return: 133\t Episode number: 230\n",
+      "Average return: 102.904\t Episode return: 200\t Episode number: 240\n",
+      "Average return: 106.788\t Episode return: 200\t Episode number: 250\n",
+      "Average return: 110.373\t Episode return: 200\t Episode number: 260\n",
+      "Average return: 112.289\t Episode return: 149\t Episode number: 270\n",
+      "Average return: 114.679\t Episode return: 200\t Episode number: 280\n",
+      "Average return: 117.621\t Episode return: 200\t Episode number: 290\n",
+      "Average return: 120.367\t Episode return: 200\t Episode number: 300\n",
+      "Average return: 122.919\t Episode return: 200\t Episode number: 310\n",
+      "Average return: 125.328\t Episode return: 200\t Episode number: 320\n",
+      "Average return: 127.591\t Episode return: 200\t Episode number: 330\n",
+      "Average return: 129.721\t Episode return: 200\t Episode number: 340\n",
+      "Average return: 129.46\t Episode return: 167\t Episode number: 350\n",
+      "Average return: 131.419\t Episode return: 200\t Episode number: 360\n",
+      "Average return: 133.273\t Episode return: 200\t Episode number: 370\n",
+      "Average return: 135.029\t Episode return: 200\t Episode number: 380\n",
+      "Average return: 136.695\t Episode return: 200\t Episode number: 390\n",
+      "Average return: 137.655\t Episode return: 190\t Episode number: 400\n",
+      "Average return: 139.176\t Episode return: 200\t Episode number: 410\n",
+      "Average return in 100 consecutive trials : 200\n"
+     ]
+    }
+   ],
    "source": [
-    "// Training the same agent till the total average return reaches 150\n",
+    "// Training the same agent till the total average return reaches 140\n",
     "train(140)"
    ]
   },
@@ -325,9 +405,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Total steps: 200\t Total reward: 200\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bd71ce8ab8884ad0a9c28bf112179d4e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "A Jupyter widget"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "// Creating and setting up the gym environment for testing.\n",
     "gym::Environment env(\"gym.kurg.org\", \"4040\", \"CartPole-v0\");\n",
