thresholding based on episodes

--- a/q_learning/cartpole_dqn.ipynb
+++ b/q_learning/cartpole_dqn.ipynb
@@ -202,13 +202,7 @@
     "          << \"\\t Episode number: \" << episodes << std::endl;\n",
     "    }\n",
     "\n",
-    "    if (episodes > 1000)\n",
-    "    {\n",
-    "      std::cout << \"Cart Pole with DQN failed.\" << std::endl;\n",
-    "      break;\n",
-    "    }\n",
-    "\n",
-    "    if (averageReturn.mean() > threshold)\n",
+    "    if (episodes > threshold)\n",
     "    {\n",
     "      agent.Deterministic() = true;\n",
     "      arma::running_stat<double> testReturn;\n",
@@ -239,25 +233,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average return: 24.2\t Episode return: 27\t Episode number: 10\n",
-      "Average return: 20.9\t Episode return: 16\t Episode number: 20\n",
-      "Average return: 21.3\t Episode return: 13\t Episode number: 30\n",
-      "Average return: 19.575\t Episode return: 22\t Episode number: 40\n",
-      "Average return: 18.12\t Episode return: 8\t Episode number: 50\n",
-      "Average return: 17.15\t Episode return: 10\t Episode number: 60\n",
-      "Average return: 16.6571\t Episode return: 9\t Episode number: 70\n",
-      "Average return: 17.1375\t Episode return: 18\t Episode number: 80\n",
-      "Average return: 19.2778\t Episode return: 45\t Episode number: 90\n",
-      "Average return: 22.44\t Episode return: 43\t Episode number: 100\n",
-      "Average return: 26.1545\t Episode return: 52\t Episode number: 110\n",
-      "Average return: 33.9\t Episode return: 110\t Episode number: 120\n",
-      "Average return in 100 consecutive trials : 160.13\n"
+      "Average return: 15.8\t Episode return: 21\t Episode number: 10\n",
+      "Average return: 17.9\t Episode return: 21\t Episode number: 20\n",
+      "Average return: 17.6667\t Episode return: 14\t Episode number: 30\n",
+      "Average return: 17.075\t Episode return: 9\t Episode number: 40\n",
+      "Average return: 17.14\t Episode return: 13\t Episode number: 50\n",
+      "Average return: 19.0833\t Episode return: 46\t Episode number: 60\n",
+      "Average return: 27.1143\t Episode return: 74\t Episode number: 70\n",
+      "Average return: 33.25\t Episode return: 52\t Episode number: 80\n",
+      "Average return: 42.2444\t Episode return: 141\t Episode number: 90\n",
+      "Average return: 55.54\t Episode return: 10\t Episode number: 100\n",
+      "Average return: 55.7182\t Episode return: 16\t Episode number: 110\n",
+      "Average return: 63.875\t Episode return: 200\t Episode number: 120\n",
+      "Average return in 100 consecutive trials : 167.63\n"
      ]
     }
    ],
    "source": [
-    "// Training the agent till the total average return reaches 35.\n",
-    "train(35)"
+    "// Training the agent for a total of 120 episodes.\n",
+    "train(120)"
    ]
   },
   {
@@ -276,13 +270,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Total steps: 200\t Total reward: 200\n"
+      " Total steps: 186\t Total reward: 186\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e6ee8825b40b4826a9c1f60f19401c21",
+       "model_id": "2817382cf8824db8bee1fdc02d9a515e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -358,42 +352,51 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average return: 45.4231\t Episode return: 187\t Episode number: 130\n",
-      "Average return: 56.0571\t Episode return: 200\t Episode number: 140\n",
-      "Average return: 61.7733\t Episode return: 20\t Episode number: 150\n",
-      "Average return: 60.4875\t Episode return: 13\t Episode number: 160\n",
-      "Average return: 65.4765\t Episode return: 200\t Episode number: 170\n",
-      "Average return: 72.85\t Episode return: 200\t Episode number: 180\n",
-      "Average return: 79.3737\t Episode return: 200\t Episode number: 190\n",
-      "Average return: 85.405\t Episode return: 200\t Episode number: 200\n",
-      "Average return: 90.8524\t Episode return: 200\t Episode number: 210\n",
-      "Average return: 95.8136\t Episode return: 200\t Episode number: 220\n",
-      "Average return: 99.1304\t Episode return: 133\t Episode number: 230\n",
-      "Average return: 102.904\t Episode return: 200\t Episode number: 240\n",
-      "Average return: 106.788\t Episode return: 200\t Episode number: 250\n",
-      "Average return: 110.373\t Episode return: 200\t Episode number: 260\n",
-      "Average return: 112.289\t Episode return: 149\t Episode number: 270\n",
-      "Average return: 114.679\t Episode return: 200\t Episode number: 280\n",
-      "Average return: 117.621\t Episode return: 200\t Episode number: 290\n",
-      "Average return: 120.367\t Episode return: 200\t Episode number: 300\n",
-      "Average return: 122.919\t Episode return: 200\t Episode number: 310\n",
-      "Average return: 125.328\t Episode return: 200\t Episode number: 320\n",
-      "Average return: 127.591\t Episode return: 200\t Episode number: 330\n",
-      "Average return: 129.721\t Episode return: 200\t Episode number: 340\n",
-      "Average return: 129.46\t Episode return: 167\t Episode number: 350\n",
-      "Average return: 131.419\t Episode return: 200\t Episode number: 360\n",
-      "Average return: 133.273\t Episode return: 200\t Episode number: 370\n",
-      "Average return: 135.029\t Episode return: 200\t Episode number: 380\n",
-      "Average return: 136.695\t Episode return: 200\t Episode number: 390\n",
-      "Average return: 137.655\t Episode return: 190\t Episode number: 400\n",
-      "Average return: 139.176\t Episode return: 200\t Episode number: 410\n",
+      "Average return: 69.2692\t Episode return: 129\t Episode number: 130\n",
+      "Average return: 71.9\t Episode return: 102\t Episode number: 140\n",
+      "Average return: 74.2267\t Episode return: 200\t Episode number: 150\n",
+      "Average return: 76.375\t Episode return: 14\t Episode number: 160\n",
+      "Average return: 76.4529\t Episode return: 14\t Episode number: 170\n",
+      "Average return: 78.8\t Episode return: 156\t Episode number: 180\n",
+      "Average return: 83.8421\t Episode return: 200\t Episode number: 190\n",
+      "Average return: 88.85\t Episode return: 184\t Episode number: 200\n",
+      "Average return: 92.3857\t Episode return: 142\t Episode number: 210\n",
+      "Average return: 96.0636\t Episode return: 200\t Episode number: 220\n",
+      "Average return: 100.496\t Episode return: 200\t Episode number: 230\n",
+      "Average return: 104.642\t Episode return: 200\t Episode number: 240\n",
+      "Average return: 103.104\t Episode return: 10\t Episode number: 250\n",
+      "Average return: 101.885\t Episode return: 66\t Episode number: 260\n",
+      "Average return: 101.863\t Episode return: 126\t Episode number: 270\n",
+      "Average return: 103.618\t Episode return: 186\t Episode number: 280\n",
+      "Average return: 106.828\t Episode return: 200\t Episode number: 290\n",
+      "Average return: 109.933\t Episode return: 200\t Episode number: 300\n",
+      "Average return: 112.839\t Episode return: 200\t Episode number: 310\n",
+      "Average return: 115.562\t Episode return: 200\t Episode number: 320\n",
+      "Average return: 118.121\t Episode return: 200\t Episode number: 330\n",
+      "Average return: 120.529\t Episode return: 200\t Episode number: 340\n",
+      "Average return: 122.8\t Episode return: 200\t Episode number: 350\n",
+      "Average return: 124.525\t Episode return: 200\t Episode number: 360\n",
+      "Average return: 126.565\t Episode return: 200\t Episode number: 370\n",
+      "Average return: 128.497\t Episode return: 200\t Episode number: 380\n",
+      "Average return: 130.331\t Episode return: 200\t Episode number: 390\n",
+      "Average return: 128.885\t Episode return: 9\t Episode number: 400\n",
+      "Average return: 128.854\t Episode return: 200\t Episode number: 410\n",
+      "Average return: 130.548\t Episode return: 200\t Episode number: 420\n",
+      "Average return: 132.163\t Episode return: 200\t Episode number: 430\n",
+      "Average return: 133.705\t Episode return: 200\t Episode number: 440\n",
+      "Average return: 134.484\t Episode return: 200\t Episode number: 450\n",
+      "Average return: 135.909\t Episode return: 200\t Episode number: 460\n",
+      "Average return: 137.272\t Episode return: 200\t Episode number: 470\n",
+      "Average return: 138.579\t Episode return: 200\t Episode number: 480\n",
+      "Average return: 139.833\t Episode return: 200\t Episode number: 490\n",
+      "Average return: 140.726\t Episode return: 200\t Episode number: 500\n",
       "Average return in 100 consecutive trials : 200\n"
      ]
     }
    ],
    "source": [
-    "// Training the same agent till the total average return reaches 140\n",
-    "train(140)"
+    "// Training the same agent for a total of 500 episodes.\n",
+    "train(500)"
    ]
   },
   {
@@ -418,7 +421,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bd71ce8ab8884ad0a9c28bf112179d4e",
+       "model_id": "85d1a73a1b7b48628333f8535a900856",
        "version_major": 2,
        "version_minor": 0
       },
